--- a/css/style.css
+++ b/css/style.css
@@ -9,16 +9,18 @@ body {
 nav {
     background-color: #e0e0e0;
     padding: 10px;
+    margin-bottom: 20px;
 }
 
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
 }
 
 nav li {
-    display: inline;
     margin-right: 10px;
 }
 
@@ -28,12 +30,10 @@ nav a {
 }
 
 aside {
-    flex: 1;
-    background-color: #f0f0f0;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgb(44, 44, 44);
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 aside h3 {
@@ -57,6 +57,7 @@ aside a {
 
 header h1 {
     margin-top: 0;
+    text-align: center;
 }
 
 img {
@@ -66,4 +67,91 @@ img {
     margin: 10px auto;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgb(44, 44, 44);
+}
+
+.row {
+    display: flex;
+    padding: 20px;
+    flex-direction: row;
+}
+
+.main-content {
+    flex: 3;
+    padding-right: 20px;
+}
+
+.column {
+    float: left;
+    padding: 10px;
+}
+
+.column.side {
+    width: 25%;
+}
+
+.column.sides {
+    width: 20%;
+}
+
+.column.middle {
+    width: 30%;
+}
+
+.row::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+footer {
+    background-color: #e0e0e0;
+    padding: 10px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+@media screen and (max-width: 600px) {
+    .column.side, .column.middle{
+        width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .content-wrapper {
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .main-content {
+        padding-right: 0;
+        margin-bottom: 20px;
+    }
+}
+
+nav ul {
+    text-align: left;
+}
+
+nav li {
+    display: block;
+    margin-bottom: 5px;
+}
+
+iframe {
+    width: 100%;
+    height: 400px;
+}
+
+@media (max-width: 480px) {
+    body {
+        margin: 10px;
+    }
+
+    h1 {
+        font-size: 1.5em;
+    }
+    
+    h2 {
+        font-size: 1.2em;
+    }
 }
